# nested-logit-demand

./: .gitignore  README.md  justfile  pyproject.toml  simple_example.py
.claude/: settings.local.json
.claude/agents/: io-economist.md  python-function-developer.md  python-philosophy-expert.md  web-research-expert.md
src/: __init__.py  simple_data_loader.py  simple_elasticity.py  simple_estimation.py
